Add search lot with location_id
