# storage/api-docs/api-docs.json
@@ -1341,7 +1341,7 @@
                 ],
                 "summary": "Listar las provincias",
                 "description": "Listar las provincias (con Token)",
-                "operationId": "LocationsGet",
+                "operationId": "EstateGet",
                 "responses": {
                     "200": {
                         "description": "Ok",
@@ -1394,10 +1394,75 @@
                 ],
                 "summary": "Listar de localidades",
                 "description": "Listar de localidades (con Token)",
-                "operationId": "LocationsGet",
+                "operationId": "DistrictGet",
                 "parameters": [
                     {
-                        "name": "id",
+                        "name": "state_id",
+                        "in": "path",
+                        "description": "ID del mensaje",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Ok"
+                                        },
+                                        "obj": {
+                                            "type": "string",
+                                            "example": "array()"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Error: Unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Unauthenticated"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/location/lot/{location_id}": {
+            "get": {
+                "tags": [
+                    "Barrios"
+                ],
+                "summary": "Listar lotes en el Barrio",
+                "description": "Listar lotes en el Barrio (con Token)",
+                "operationId": "LocationLotsGet",
+                "parameters": [
+                    {
+                        "name": "location_id",
                         "in": "path",
                         "description": "ID del mensaje",
                         "required": true,
